--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ amll-lyric = "0.1.1"
 eframe = { version = "0.28.1", features = ["default", "wgpu"] }
 egui = "0.28.1"
 env_logger = "0.11.5"
+log = "0.4.22"
 mpris = "2.0.1"
 serde = { version = "1.0.210", features = ["derive"] }
+serde_json = "1.0.128"
 serde_yaml = "0.9.34"
