--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,11 @@ env_logger = "0.11.5"
 log = "0.4.22"
 mpris = "2.0.1"
 serde = { version = "1.0.210", features = ["derive"] }
-serde_json = "1.0.128"
 serde_yaml = "0.9.34"
+
+[profile.release]
+strip = true
+lto = true
+codegen-units = 1
+panic = "abort"
+split-debuginfo = "off"
