--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 amll-lyric = "0.1.1"
-eframe = { version = "0.28.1", features = ["default", "wgpu"] }
-egui = "0.28.1"
+eframe = { version = "0.28.1", features = ["default"] }
 env_logger = "0.11.5"
 log = "0.4.22"
 mpris = "2.0.1"
