--- a/config.yaml
+++ b/config.yaml
@@ -2,5 +2,5 @@ text_color: "#ffffffff"
 background_color: "#00000070"
 text_size: 50
 default_size: !Struct { x: 600.0, y: 70.0 }
-passthrough: true
+passthrough: false
 lyric_dir: "/home/misaka/Temp/Music/"
