--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,16 @@
 name = "desktop_lyric"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+description = "Desktop lyric application for linux"
+readme = "README.md"
+homepage = "https://github.com/Moeweb647252/desktop_lyric"
+repository = "https://github.com/Moeweb647252/desktop_lyric"
 
 [dependencies]
 amll-lyric = "0.1.1"
+clap = { version = "4.5.17", features = ["derive"] }
+dirs = "5.0.1"
 eframe = { version = "0.28.1", features = ["default"] }
 env_logger = "0.11.5"
 log = "0.4.22"
