--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ clap = { version = "4.5.17", features = ["derive"] }
 dirs = "5.0.1"
 eframe = { version = "0.28.1", features = ["default"] }
 env_logger = "0.11.5"
+font-loader = "0.11.0"
 log = "0.4.22"
 mpris = "2.0.1"
 serde = { version = "1.0.210", features = ["derive"] }
@@ -22,7 +23,11 @@ simsearch = "0.2.5"
 
 [profile.release]
 strip = true
-lto = true
-codegen-units = 1
-panic = "abort"
 split-debuginfo = "off"
+lto = "thin"
+panic = "abort"
+codegen-units = 1
+opt-level = "s"
+
+[profile.dev]
+debug = 0
